syntax = "proto3";
option java_multiple_files = true;
package com.definition.grpc.document;

message DocumentRequest {
  repeated string title = 1;
}

message DocumentResponse {
  repeated Document document = 1;
}

message Document {
  string title = 2;
  string description = 3;
  string path = 4;
}

service DocumentService {
  rpc getDocuments(DocumentRequest) returns (DocumentResponse);
}